--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "webpack": "^3.10.0"
+  },
+  "dependencies": {
+    "html-parse-stringify": "^1.0.2",
+    "list-diff2": "^0.1.4"
   }
 }
